--- a/index.html
+++ b/index.html
@@ -4,105 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Inspira.dev</title>
-  <style>
-    * {
-      margin: 0;
-      padding: 0;
-      box-sizing: border-box;
-    }
-
-    body {
-      font-family: 'Segoe UI', sans-serif;
-      background-color: #0f0f0f;
-      color: #f1f1f1;
-      line-height: 1.6;
-    }
-
-    header {
-      background: #1a1a1a;
-      padding: 20px;
-      text-align: center;
-    }
-
-    header h1 {
-      font-size: 2em;
-    }
-
-    header h1 span {
-      color: #00ffcc;
-    }
-
-    nav {
-      margin-top: 10px;
-    }
-
-    nav a {
-      margin: 0 10px;
-      color: #ccc;
-      text-decoration: none;
-    }
-
-    nav a:hover {
-      color: #00ffcc;
-    }
-
-    .container {
-      padding: 40px 20px;
-      max-width: 800px;
-      margin: auto;
-      text-align: center;
-    }
-
-    #quote-box {
-      background: #1a1a1a;
-      padding: 30px;
-      border-radius: 10px;
-      margin-top: 20px;
-    }
-
-    #quote {
-      font-size: 1.5em;
-      margin-bottom: 20px;
-      transition: opacity 0.5s ease;
-    }
-
-    button {
-      background: #00ffcc;
-      border: none;
-      padding: 10px 20px;
-      color: #000;
-      font-weight: bold;
-      border-radius: 5px;
-      cursor: pointer;
-    }
-
-    button:hover {
-      background: #00e6b3;
-    }
-
-    .social {
-      list-style: none;
-      padding: 0;
-    }
-
-    .social li {
-      display: inline;
-      margin: 0 10px;
-    }
-
-    .social a {
-      color: #00ffcc;
-      text-decoration: none;
-    }
-
-    footer {
-      background: #111;
-      padding: 20px;
-      text-align: center;
-      font-size: 0.9em;
-      color: #555;
-    }
-  </style>
+  <link rel="stylesheet" href="inspira.css">
 </head>
 <body>
   <header>
